--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="node_modules/primeng/resources/themes/omega/theme.css" />
   <link rel="stylesheet" type="text/css" href="app/resources/icons/css/font-awesome.min.css" />
   <link rel="stylesheet" type="text/css" href="node_modules/primeng/resources/primeng.min.css" />
+  <link rel="stylesheet" type="text/css" href="app/resources/css/font.css" />
 
   <!-- 1. Load libraries -->
   <!-- Polyfill(s) for older browsers -->
@@ -24,7 +25,9 @@
 </head>
 
 <!-- 3. Display the application -->
-<body>
+
+<body style="margin:0; padding:0;">
+  <header-app>Loading...</header-app>
   <my-app>Loading...</my-app>
 </body>
 
