--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="shortcut icon" type="image/x-icon" href="app/resources/images/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="node_modules/primeng/resources/themes/omega/theme.css" />
   <link rel="stylesheet" type="text/css" href="app/resources/icons/css/font-awesome.min.css" />
   <link rel="stylesheet" type="text/css" href="node_modules/primeng/resources/primeng.min.css" />
@@ -28,7 +29,7 @@
 
 <body style="margin:0; padding:0;">
   <header-app>Loading...</header-app>
-  <my-app>Loading...</my-app>
+  <my-app></my-app>
 </body>
 
 </html>
