--- a/app/app.home.html
+++ b/app/app.home.html
@@ -14,4 +14,7 @@
     <p-tabPanel header="Cidade">
         <p-chart type="pie" [data]="vwColabCidadeQtdeChart"></p-chart>
     </p-tabPanel>
+    <p-tabPanel header="Gerente">
+        <p-chart type="pie" [data]="vwColabGerenteQtdeChart"></p-chart>
+    </p-tabPanel>
 </p-tabView>
