Coordinator chart ready

--- a/app/app.home.html
+++ b/app/app.home.html
@@ -17,4 +17,7 @@
     <p-tabPanel header="Gerente">
         <p-chart type="pie" [data]="vwColabGerenteQtdeChart"></p-chart>
     </p-tabPanel>
+    <p-tabPanel header="Coordenador">
+        <p-chart type="pie" [data]="vwColabCoordenadorQtdeChart"></p-chart>
+    </p-tabPanel>
 </p-tabView>
