--- a/app/app.home.html
+++ b/app/app.home.html
@@ -20,7 +20,7 @@
     <p-tabPanel header="Coordenador">
         <p-chart type="pie" [data]="vwColabCoordenadorQtdeChart"></p-chart>
     </p-tabPanel>
-    <p-tabPanel header="Data Admissão Área">
-        <p-chart type="bar" [data]="vwColabDtAdmissaoAreaQtdeChart"></p-chart>
+    <p-tabPanel header="Data Admissão">
+        <p-chart type="bar" [data]="vwColabDtAdmissaoQtdeChart"></p-chart>
     </p-tabPanel>
 </p-tabView>
