Shutdown date ready

--- a/app/app.home.html
+++ b/app/app.home.html
@@ -23,4 +23,7 @@
     <p-tabPanel header="Data Admissão">
         <p-chart type="bar" [data]="vwColabDtAdmissaoQtdeChart"></p-chart>
     </p-tabPanel>
+    <p-tabPanel header="Data Desligamento">
+        <p-chart type="bar" [data]="vwColabDtDesligAreaQtdeChart"></p-chart>
+    </p-tabPanel>
 </p-tabView>
