--- a/app/app.home.html
+++ b/app/app.home.html
@@ -20,10 +20,10 @@
     <p-tabPanel header="Coordenador">
         <p-chart type="pie" [data]="vwColabCoordenadorQtdeChart"></p-chart>
     </p-tabPanel>
-    <p-tabPanel header="Data Admissão">
+    <p-tabPanel header="Admissão">
         <p-chart type="bar" [data]="vwColabDtAdmissaoQtdeChart"></p-chart>
     </p-tabPanel>
-    <p-tabPanel header="Data Desligamento">
+    <p-tabPanel header="Desligamento">
         <p-chart type="bar" [data]="vwColabDtDesligAreaQtdeChart"></p-chart>
     </p-tabPanel>
     <p-tabPanel header="Grupo e Entre Grupo">
