--- a/app/app.tree.html
+++ b/app/app.tree.html
@@ -1,5 +1,11 @@
-Marcel
-<p-tree [value]="tree" layout="horizontal" selectionMode="single" [(selection)]="selectedFile" (onNodeSelect)="nodeSelect($event)"></p-tree>
+<p-tree [value]="tree" layout="horizontal" selectionMode="single" [(selection)]="selectedNode" (onNodeSelect)="nodeSelect($event)"></p-tree>
 
-<p-dialog [(header)]="Colaborador" [(visible)]="display" width="800" height="500" modal=true [resizable]=false>
+<p-dialog [(header)]="id" [(visible)]="display" modal=true [resizable]=false style="text-align:center">
+    <div layout-align="center center">
+        <div class="ui-g">
+            <div class="ui-g-12"><img src={{image}} (error)="updateUrl($event)" /></div>
+            <div class="ui-g-12"></div>
+            <div class="ui-g-12" style="text-size:20px;font-weight: bold;">{{name}}</div>
+        </div>
+    </div>
 </p-dialog>
