--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!-- 3. Display the application -->
 
 <body style="margin:0; padding:0;">
-  <header-app>Loading...</header-app>
+  <header-app>Carregando...</header-app>
   <my-app></my-app>
 </body>
 
