--- a/app/app.config.html
+++ b/app/app.config.html
@@ -21,4 +21,14 @@
             </p-column>
         </p-dataTable>
     </p-tabPanel>
+    <p-tabPanel header="Cidade">
+        <p-dataTable [value]="tblColabCidadeList">
+            <p-column field="sdccidade" header="Cidade"></p-column>
+            <p-column field="nflativo" header="Status" styleClass="col-button">
+                <template let-tblColabCidade="rowData" pTemplate type="body">
+                    <p-inputSwitch onLabel="ativo" offLabel="inativo" (click)="selectCidade(tblColabCidade)" [(ngModel)]="tblColabCidade.nflativo"></p-inputSwitch>
+                </template>
+            </p-column>
+        </p-dataTable>
+    </p-tabPanel>
 </p-tabView>
