--- a/app/app.config.html
+++ b/app/app.config.html
@@ -31,4 +31,14 @@
             </p-column>
         </p-dataTable>
     </p-tabPanel>
+    <p-tabPanel header="Estado">
+        <p-dataTable [value]="tblColabEstadoList">
+            <p-column field="sdcestado" header="Estado"></p-column>
+            <p-column field="nflativo" header="Status" styleClass="col-button">
+                <template let-tblColabEstado="rowData" pTemplate type="body">
+                    <p-inputSwitch onLabel="ativo" offLabel="inativo" (click)="selectEstado(tblColabEstado)" [(ngModel)]="tblColabEstado.nflativo"></p-inputSwitch>
+                </template>
+            </p-column>
+        </p-dataTable>
+    </p-tabPanel>
 </p-tabView>
