--- a/app/app.config.html
+++ b/app/app.config.html
@@ -41,4 +41,14 @@
             </p-column>
         </p-dataTable>
     </p-tabPanel>
+    <p-tabPanel header="Grupo">
+        <p-dataTable [value]="tblColabGrupoList">
+            <p-column field="sdcgrupo" header="Grupo"></p-column>
+            <p-column field="nflativo" header="Status" styleClass="col-button">
+                <template let-tblColabGrupo="rowData" pTemplate type="body">
+                    <p-inputSwitch onLabel="ativo" offLabel="inativo" (click)="selectGrupo(tblColabGrupo)" [(ngModel)]="tblColabGrupo.nflativo"></p-inputSwitch>
+                </template>
+            </p-column>
+        </p-dataTable>
+    </p-tabPanel>
 </p-tabView>
