--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     #logo {
       position: relative;
       -webkit-animation-name: example;
-      -webkit-animation-duration: 9s;
+      -webkit-animation-duration: 10s;
       animation-name: example;
-      animation-duration: 9s;
+      animation-duration: 10s;
     }
     
     @-webkit-keyframes example {
@@ -38,16 +38,16 @@
         top: 0px;
       }
       25% {
-        left: 200px;
+        left: 88%;
         top: 0px;
       }
       50% {
-        left: 200px;
-        top: 200px;
+        left: 88%;
+        top: 88vh;
       }
       75% {
         left: 0px;
-        top: 200px;
+        top: 88vh;
       }
       100% {
         left: 0px;
