--- a/index.html
+++ b/index.html
@@ -40,18 +40,30 @@
       25% {
         left: 88%;
         top: 0px;
+        -ms-transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
       }
       50% {
         left: 88%;
         top: 88vh;
+        -ms-transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
       }
       75% {
         left: 0px;
         top: 88vh;
+        -ms-transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
       }
       100% {
         left: 0px;
         top: 0px;
+        -ms-transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
       }
     }
   </style>
