--- a/app/app.config.html
+++ b/app/app.config.html
@@ -9,7 +9,7 @@
             <p-column field="snomatrcompl" header="Matrícula"></p-column>
             <p-column field="nflativo" header="Status" styleClass="col-button">
                 <template let-tblColabAdmin="rowData" pTemplate type="body">
-                    <p-inputSwitch onLabel="ativo" offLabel="inativo" (click)="selectAdmin(tblColabAdmin)" [(ngModel)]="tblColabAdmin.nflativo"></p-inputSwitch>
+                    <p-inputSwitch onLabel="ativo" offLabel="inativo" (click)="selectAdmin(tblColabAdmin)" [(ngModel)]="tblColabAdmin.ativo"></p-inputSwitch>
                 </template>
             </p-column>
         </p-dataTable>
